# subleq-rust

./: Cargo.toml  makefile  readme.md
src/: eforth.rs  main.rs  subleq.rs
